# jupyter-scatter

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DOCS.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  environment.yml  install.json  jscatter.json  jupyter-scatter.json  lefthook.yml  paper.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  enhancement.md
.github/workflows/: build.yml  ci.yml  publish-npm.yml  publish-pypi.yml  publish.yml  release.yml  test.yml
docs/: .gitignore  annotations.md  api.md  axes-legend-tooltip.md  axes-legends.md  connected-scatterplots.md  export-image.md  get-started.md  index.md  interactions.md  labels.md  link-multiple-plots.md  package-lock.json  package.json  scales.md  selections.md  tooltip.md  utils.ts
docs/.vitepress/: config.ts
docs/.vitepress/theme/: Layout.vue  custom.css  index.ts
docs/public/: .gitattributes
js/: .eslintrc  .lintstagedrc  Untitled.ipynb  Untitled1.ipynb  amd-public-path.js  biome.json  build.mjs  embed.js  extension.js  get-version-info.js  index.js  labplugin.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/.virtual_documents/: Untitled.ipynb
js/src/: Untitled.ipynb  codecs.js  histogram.js  index.js  label-renderer.js  legend.js  store.js  store.ts  styles.css  types.ts  utils.js
js/src/components/: BrushSizeSlider.jsx  BrushSizeSlider.tsx  Button.jsx  Button.tsx  Divider.jsx  Divider.tsx  DownloadButton.jsx  DownloadButton.tsx  FullScreenButton.jsx  FullScreenButton.tsx  FullscreenPanel.jsx  FullscreenPanel.tsx  LassoTypeChoice.jsx  LassoTypeChoice.tsx  MouseModeToggle.jsx  MouseModeToggle.tsx  ResetButton.jsx  ResetButton.tsx  SaveButton.jsx  SaveButton.tsx  Toolbar.jsx  Toolbar.tsx  icons.jsx  icons.tsx
js/src/hooks/: use-widget.js  use-widget.ts
jscatter/: __init__.py  _cli.py  _version.py  annotations.py  annotations_traits.py  color_maps.py  compose.py  composite_annotations.py  dataframe_utils.py  dependencies.py  encodings.py  encodings_test.py  jscatter.py  jscatter_test.py  type_guards.py  types.py  utils.py  utils_test.py  widget.py
jscatter/font/: .gitignore  README.md  __init__.py  arial-bold-italic.json  arial-bold.json  arial-italic.json  arial.json  font.py  font_family.py
jscatter/label_placement/: __init__.py  aggregate.py  center_of_mass.py  constants.py  highest_density_point.py  k.py  label_placement.py  largest_cluster.py  optimize_line_breaks.py  persistence.py  resolve_zoom_in_collisions.py  text.py  tile.py  types.py  utils.py  zoom_solver.py
jscatter/pycolormap_2d/: __init__.py  colormap_2d.py
jscatter/pycolormap_2d/data/: bremm.npy  cubediagonal.npy  schumann.npy  steiger.npy  teulingfig2.npy  ziegler.npy
jscatter/serializers/: __init__.py  dataframe.py  ndarray.py
jscatter/traittypes/: LICENSE  README.md  __init__.py  array.py  dataframe.py  scitype.py
jscatter/widgets/: __init__.py  button.py  button_choice.py  button_slider.py  divider.py
jtest/: README.md  test.ipynb
notebooks/: Untitled.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  annotations.ipynb  composition.ipynb  dataframe_test.ipynb  demo.ipynb  dimbridge.ipynb  example.ipynb  examples.ipynb  get-started.ipynb  linking.ipynb  marimo.py
paper/: examples.ipynb  refs.bib
scatterplot/: __init__.py  scatterplot.py  utils.py
test-environment/: README.md  environment.yml  test.ipynb
test-environments/: README.md  environment-py310-ipyw7-jlab1.yml  environment-py310-ipyw8-jlab3.yml  environment-py39-ipyw7-jlab1.yml  environment-py39-ipyw8-jlab3.yml  test.ipynb
tests/: conftest.py  test_annotations.py  test_composite_annotations.py  test_dependencies.py  test_encodings.py  test_jscatter.py  test_label_placement.py  test_label_placement_center_of_mass.py  test_label_placement_highest_density.py  test_label_placement_importance_aggregation.py  test_label_placement_k.py  test_label_placement_line_breaks.py  test_label_placement_persistence.py  test_label_placement_positioning.py  test_label_placement_properties.py  test_label_placement_zoom_solver.py  test_optional_dependencies.py  test_polars_support.py  test_utils.py
