[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-scatter"
description = "A scatter plot extension for Jupyter Notebook and Lab"
authors = [
  { name = "Fritz Lekschas", author_email = "code@lekschas.de" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = [
    "scatter",
    "scatter plot",
    "jupyter",
    "ipython",
    "ipywidgets",
    "jupyterlab",
    "jupyterlab-extension",
    "widgets",
]
dependencies = [
    "anywidget>=0.2.0",
    "ipywidgets>=7.6,<9",
    "ipython",
    "matplotlib",
    "numpy",
    "pandas",
    "traittypes>=0.2.1",
    "typing_extensions",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/flekschas/jscatter"

[project.optional-dependencies]
dev = [
    "anywidget[dev]",
    "black[jupyter]",
    "jupyterlab>=3.0,<4",
    "pytest",
    "ruff",
]

# Configures hatchling build system to use the verison
# found in the package.json file for the python package.
[tool.hatch.version]
path = "js/package.json"
pattern = "\"version\": \"(?P<version>.+?)\""

[tool.hatch.build]
artifacts = ["jscatter/bundle.js"]


[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["jscatter/bundle.js"]
skip-if-exists = ["jscatter/bundle.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
path = "js"

[tool.hatch.envs.default]
features = ["dev"]
