[metadata]
name = jupyter-scatter
author = Fritz Lekschas
author_email = code@lekschas.de
license = Apache-2.0
description = A scatter plot extension for Jupyter Notebook and Lab
url = https://github.com/flekschas/jscatter
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    scatter
    scatter plot
    jupyter
    ipython
    ipywidgets
    jupyterlab
    jupyterlab-extension
    widgets

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ipywidgets>=7.6,<9
python_requires = >=3.7
tests_require =
  pytest
